# wsm-project2

./: .gitignore  README.md  eval_model.sh  part1.py  part2.py  pyproject.toml  trec_eval.sh  trec_parse.py  wt2g_index.sh  wt2g_index_out.txt  wt2g_parse.py
rankings/plot/: map_p1.py  map_p2.py  p10_p1.py  p10_p2.py
rankings/qrels_401_440/: map_dfr.py  p10_dfr.py
rankings/qrels_401_440/bm25/: output.krovetz  output.none  output.porter  result.krovetz  result.none  result.porter
rankings/qrels_401_440/dfr-g-l-h2/: output.porter  result.porter
rankings/qrels_401_440/dfr-in-l-h1/: output.porter  result.porter
rankings/qrels_401_440/dfr-in-l-h2/: output.porter  result.porter
rankings/qrels_401_440/dfr-in-l-h3/: output.porter  result.porter
rankings/qrels_401_440/dfr-in-l-z/: output.porter  result.porter
rankings/qrels_401_440/dfr-ine-l-h2/: output.porter  result.porter
rankings/qrels_401_440/lmjm/: output.krovetz  output.none  output.porter  result.krovetz  result.none  result.porter
rankings/qrels_401_440/lmmle/: output.krovetz  output.none  output.porter  result.krovetz  result.none  result.porter
rankings/qrels_441_450/: map.py  output.all  output.bm25_porter.lmmle_porter  output.dfr  output.dfr.minmax  output.dfr.robust  output.porter  output.porter.minmax  output.porter.robust  p10.py  result.all  result.bm25_porter.lmmle_porter  result.dfr  result.dfr.minmax  result.dfr.robust  result.porter  result.porter.minmax  result.porter.robust
rankings/qrels_441_450/bm25/: output.krovetz  output.none  output.porter  (+3 more)
report/: report.html  report.md
(+16 files in other folders)
