[tool.poetry]
name = "project2"
version = "0.1.0"
description = ""
authors = ["GINTOAHC <chaotingchen10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyserini = "^0.43.0"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
